app/templates/_dynamodb-titan-storage-backend-cfn.json
{
    "Description": "This stack creates a VPC, an EC2 Amazon Linux host in the VPC with a Public IP, and deploys Rexster server on it. **WARNING** Rexster will create 6 DynamoDB tables. This template creates an Amazon EC2 instance. You will be billed for the AWS resources used if you create a stack from this template.",
    "AWSTemplateFormatVersion": "2010-09-09",
    "Mappings": {
        "AWSRegionArch2AMI": {
            "us-east-1":      { "PV64": "ami-1ccae774", "HVM64": "ami-1ecae776", "HVMG2": "ami-8c6b40e4" },
            "us-west-2":      { "PV64": "ami-ff527ecf", "HVM64": "ami-e7527ed7", "HVMG2": "ami-abbe919b" },
            "us-west-1":      { "PV64": "ami-d514f291", "HVM64": "ami-d114f295", "HVMG2": "ami-f31ffeb7" },
            "eu-west-1":      { "PV64": "ami-bf0897c8", "HVM64": "ami-a10897d6", "HVMG2": "ami-d5bc24a2" },
            "eu-central-1":   { "PV64": "ami-ac221fb1", "HVM64": "ami-a8221fb5", "HVMG2": "ami-7cd2ef61" },
            "ap-northeast-1": { "PV64": "ami-27f90e27", "HVM64": "ami-cbf90ecb", "HVMG2": "ami-6318e863" },
            "ap-southeast-1": { "PV64": "ami-acd9e8fe", "HVM64": "ami-68d8e93a", "HVMG2": "ami-3807376a" },
            "ap-southeast-2": { "PV64": "ami-ff9cecc5", "HVM64": "ami-fd9cecc7", "HVMG2": "ami-89790ab3" },
            "sa-east-1":      { "PV64": "ami-bb2890a6", "HVM64": "ami-b52890a8", "HVMG2": "NOT_SUPPORTED" },
            "cn-north-1":     { "PV64": "ami-fa39abc3", "HVM64": "ami-f239abcb", "HVMG2": "NOT_SUPPORTED" }
        },
        "AWSInstanceType2Arch": {
            "c3.2xlarge":  { "Arch": "HVM64" },
            "c3.4xlarge":  { "Arch": "HVM64" },
            "c3.8xlarge":  { "Arch": "HVM64" },
            "c3.large":    { "Arch": "HVM64" },
            "c3.xlarge":   { "Arch": "HVM64" },
            "c4.2xlarge":  { "Arch": "HVM64" },
            "c4.4xlarge":  { "Arch": "HVM64" },
            "c4.8xlarge":  { "Arch": "HVM64" },
            "c4.large":    { "Arch": "HVM64" },
            "c4.xlarge":   { "Arch": "HVM64" },
            "d2.2xlarge":  { "Arch": "HVM64" },
            "d2.4xlarge":  { "Arch": "HVM64" },
            "d2.8xlarge":  { "Arch": "HVM64" },
            "d2.xlarge":   { "Arch": "HVM64" },
            "g2.2xlarge":  { "Arch": "HVMG2" },
            "g2.8xlarge":  { "Arch": "HVMG2" },
            "i2.2xlarge":  { "Arch": "HVM64" },
            "i2.4xlarge":  { "Arch": "HVM64" },
            "i2.8xlarge":  { "Arch": "HVM64" },
            "i2.xlarge":   { "Arch": "HVM64" },
            "m3.2xlarge":  { "Arch": "HVM64" },
            "m3.large":    { "Arch": "HVM64" },
            "m3.medium":   { "Arch": "HVM64" },
            "m3.xlarge":   { "Arch": "HVM64" },
            "m4.10xlarge": { "Arch": "HVM64" },
            "m4.2xlarge":  { "Arch": "HVM64" },
            "m4.4xlarge":  { "Arch": "HVM64" },
            "m4.large":    { "Arch": "HVM64" },
            "m4.xlarge":   { "Arch": "HVM64" },
            "r3.2xlarge":  { "Arch": "HVM64" },
            "r3.4xlarge":  { "Arch": "HVM64" },
            "r3.8xlarge":  { "Arch": "HVM64" },
            "r3.large":    { "Arch": "HVM64" },
            "r3.xlarge":   { "Arch": "HVM64" },
            "t1.micro":    { "Arch": "PV64"  },
            "t2.medium":   { "Arch": "HVM64" },
            "t2.micro":    { "Arch": "HVM64" },
            "t2.small":    { "Arch": "HVM64" }
        }
    },
    "Parameters": {
        "InstanceType": {
            "Description": "EC2 instance type",
            "Type": "String",
            "Default": "m4.10xlarge",
            "AllowedValues": [
                "c3.2xlarge",
                "c3.4xlarge",
                "c3.8xlarge",
                "c3.large",
                "c3.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c4.8xlarge",
                "c4.large",
                "c4.xlarge",
                "d2.2xlarge",
                "d2.4xlarge",
                "d2.8xlarge",
                "d2.xlarge",
                "g2.2xlarge",
                "g2.8xlarge",
                "i2.2xlarge",
                "i2.4xlarge",
                "i2.8xlarge",
                "i2.xlarge",
                "m3.2xlarge",
                "m3.large",
                "m3.medium",
                "m3.xlarge",
                "m4.10xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.large",
                "m4.xlarge",
                "r3.2xlarge",
                "r3.4xlarge",
                "r3.8xlarge",
                "r3.large",
                "r3.xlarge",
                "t2.large",
                "t2.medium",
                "t2.micro",
                "t2.small"
            ],
            "ConstraintDescription": "Must be a valid EC2 instance type."
        },
        "KeyName": {
            "Description": "Name of existing EC2 SSH key",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "",
            "MinLength": "0",
            "MaxLength": "255",
            "AllowedPattern": "[\\x20-\\x7E]*",
            "ConstraintDescription": "can contain only ASCII characters."
        },
        "SSHLocation": {
            "Description": "CIDR range allowed to SSH into EC2 instance",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/32",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "VPCRange": {
            "Description": "CIDR range to assign to new VPC",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.0.0/16",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "SubnetRange": {
            "Description": "CIDR range to assign to new subnet in VPC",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.0.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "RexsterPort": {
            "Description": "The port to serve Rexster REST API and Doghouse out of",
            "Type": "String",
            "MinLength": "1",
            "MaxLength": "5",
            "Default": "8182",
            "AllowedPattern": "(\\d{1,5})",
            "ConstraintDescription": "must be a valid port."
        },
        "RexProPort": {
            "Description": "The port to serve RexPro binary protocol out of",
            "Type": "String",
            "MinLength": "1",
            "MaxLength": "5",
            "Default": "8184",
            "AllowedPattern": "(\\d{1,5})",
            "ConstraintDescription": "must be a valid port."
        },
        "RexsterXMLFileS3Url": {
            "Description": "The rexster XML configuration",
            "Type": "String",
            "MinLength": "1"
        },
        "TitanInstanceProfilePath": {
            "Description": "The IAM path",
            "Type": "String",
            "Default": "/",
            "MinLength": "1"
        },
        "TitanInstanceProfileRole": {
            "Description": "The IAM role, must include S3 read and DynamoDB full access",
            "Type": "String",
            "MinLength": "1"
        }
    },
    "Resources": {
        "InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": {
                    "Ref": "TitanInstanceProfilePath"
                },
                "Roles": [
                    {
                        "Ref": "TitanInstanceProfileRole"
                    }
                ]
            }
        },
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCRange"
                },
                "EnableDnsSupport" : "true",
                "EnableDnsHostnames" : "true",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "SubnetRange"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "Route": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "AttachGateway",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "SubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTable"
                }
            }
        },
        "NetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "InboundSSHNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                },
                "RuleNumber": "101",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": {
                    "Ref": "SSHLocation"
                },
                "PortRange": {
                    "From": "22",
                    "To": "22"
                }
            }
        },
        "InboundResponsePortsNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                },
                "RuleNumber": "102",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "1024",
                    "To": "65535"
                }
            }
        },
        "OutboundHTTPNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                },
                "RuleNumber": "101",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "80",
                    "To": "80"
                }
            }
        },
        "OutboundHTTPSNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                },
                "RuleNumber": "102",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "443",
                    "To": "443"
                }
            }
        },
        "OutboundResponsePortsNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                },
                "RuleNumber": "103",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "1024",
                    "To": "65535"
                }
            }
        },
        "SubnetNetworkAclAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet"
                },
                "NetworkAclId": {
                    "Ref": "NetworkAcl"
                }
            }
        },
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Enable SSH access via port 22",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    }
                ]
            }
        },
        "WebServerInstance": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "AttachGateway",
            "Properties": {
                "DisableApiTermination": "FALSE",
                "IamInstanceProfile": {
                    "Ref": "InstanceProfile"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSRegionArch2AMI",
                        {
                            "Ref": "AWS::Region"
                        },
                        {
                            "Fn::FindInMap": [
                                "AWSInstanceType2Arch",
                                {
                                    "Ref": "InstanceType"
                                },
                                "Arch"
                            ]
                        }
                    ]
                },
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "InstanceSecurityGroup"
                            }
                        ],
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "Subnet"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Amazon DynamoDB Storage Backend for Titan on AWS"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash\n",
                                "set -x\n",
                                "#install dependencies\n",
                                "yum install -y sqlite-devel\n",
                                "#constants for use in user data script\n",
                                "export REXSTER_USERNAME='ec2-user'\n",
                                "export LOG_DIR=/var/log/rexster\n",
                                "export SERVER_DIRNAME=dynamodb-titan054-storage-backend-1.0.0-hadoop2\n",
                                "export SERVER_ZIP=${SERVER_DIRNAME}.zip\n",
                                "export PACKAGES_DIR=/usr/local/packages\n",
                                "export INSTALL_DIR=${PACKAGES_DIR}/${SERVER_DIRNAME}\n",
                                "export SERVICE_SCRIPT=${INSTALL_DIR}/bin/rexster-service.sh\n",
                                "export ZIP_URL='https://dynamodb-titan-",
                                {
                                    "Ref": "AWS::Region"
                                },
                                ".s3.amazonaws.com/dynamodb-titan054-storage-backend-1.0.0-hadoop2.zip'\n",
                                "#set up directories\n",
                                "mkdir -p ${LOG_DIR}\n",
                                "mkdir -p ${INSTALL_DIR}\n",
                                "chown -R ${REXSTER_USERNAME}:${REXSTER_USERNAME} ${LOG_DIR}\n",
                                "#download package\n",
                                "pushd ${PACKAGES_DIR}\n",
                                "curl -o ./${SERVER_ZIP} ${ZIP_URL}\n",
                                "unzip -qq ${SERVER_ZIP}\n",
                                "chmod u+x ${SERVICE_SCRIPT}\n",
                                "#install as a service\n",
                                "ln -s ${SERVICE_SCRIPT} /etc/init.d/rexster\n",
                                "chkconfig --add rexster\n",
                                "#download rexster.xml\n",
                                "REXSTER_XML=${INSTALL_DIR}/conf/rexster.xml\n",
                                "aws s3 cp ",
                                {
                                    "Ref": "RexsterXMLFileS3Url"
                                },
                                " ${REXSTER_XML}\n",
                                "#make ec2-user own everything\n",
                                "chown -R ${REXSTER_USERNAME}:${REXSTER_USERNAME} ${INSTALL_DIR}\n",
                                "#start rexster endpoints \n",
                                "service rexster start\n\n"
                            ]
                        ]
                    }
                }
            }
        }
    },
    "Outputs": {
        "SshTunnels": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "ssh -o ServerAliveInterval=50 -nNT -L",
                        {
                            "Ref": "RexsterPort"
                        },
                        ":localhost:",
                        {
                            "Ref": "RexsterPort"
                        },
                        " -L ",
                        {
                            "Ref": "RexProPort"
                        },
                        ":localhost:",
                        {
                            "Ref": "RexProPort"
                        },
                        " -i ${HOME}/.ec2/",
                        {
                            "Ref": "KeyName"
                        },
                        ".pem.txt ec2-user@",
                        {
                            "Fn::GetAtt": [
                                "WebServerInstance",
                                "PublicDnsName"
                            ]
                        }
                    ]
                ]
            },
            "Description": "Use these SSH tunnels to access REST, the Doghouse, and RexPro."
        },
        "RestApiCommandLine": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "curl http://localhost:",
                        {
                            "Ref": "RexsterPort"
                        },
                        "/graphs | python -m json.tool"
                    ]
                ]
            },
            "Description": "This is an example of how to use the REST API on the command line after you start the Rexster tunnel."
        },
        "RexsterEndpoint": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "http://localhost:",
                        {
                            "Ref": "RexsterPort"
                        }
                    ]
                ]
            },
            "Description": "This is the Rexster REST and Doghouse endpoint after creating the SSH tunnel."
        },
        "RexProEndpoint": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "http://localhost:",
                        {
                            "Ref": "RexProPort"
                        }
                    ]
                ]
            },
            "Description": "This is the RexPro binary protocol endpoint after creating the SSH tunnel."
        },
        "SshAccess": {
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "ssh -o ServerAliveInterval=50 -i ${HOME}/.ec2/",
                        {
                            "Ref": "KeyName"
                        },
                        ".pem.txt ec2-user@",
                        {
                            "Fn::GetAtt": [
                                "WebServerInstance",
                                "PublicDnsName"
                            ]
                        }
                    ]
                ]
            },
            "Description": "This is how you gain remote access to the machine."
        },
        "Note": {
            "Value": "Wait while your EC2 host to boot and start Rexster with the Amazon DynamoDB Storage Backend for Titan.",
            "Description": ""
        }
    }
}
